[package]
name = "utxo_fetcher"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
chrono = "0.4.40"

[dependencies]
zstd = "0.13.2"
reqwest = "0.11"
bitcoin = { version = "0.32.5", features = ["serde"] }
serde_json = "1.0.132"
serde = "1.0.219"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.31"
clap = { version = "4.5.36", features = ["derive"] }
